Name:                glut-events
Version:             0.1
Synopsis:            For writing GLUT's main loop in the style of Haskell's main function.
-- Description:         
Homepage:            https://github.com/gelisam/glut-events
License:             PublicDomain
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com
Category:            Graphics
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.8

Library
  Exposed-modules:     Graphics.UI.GLUT.Events,
                       Control.Monad.Trans.Suspend
  Build-depends:       base >= 4 && < 5,
                       mtl >= 2 && < 3,
                       GLUT >= 2.3 && < 3
  -- Other-modules:       

executable glut-events-demo
  build-depends:  base >= 4 && < 5,
                  mtl >= 2 && < 3,
                  OpenGL >= 2.5 && < 3, 
                  GLUT >= 2.3 && < 3,
                  glut-events >= 0.1 && < 1
  main-is:        Main.hs
  hs-source-dirs: demo
